--- a/generators/mvc/templates/Views/_ViewStart.cshtml
+++ b/generators/mvc/templates/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 ﻿@{
-    Layout = "~/DesktopModules/MVC/<%= extensionName %>/Views/Shared/_Layout.cshtml";
+    Layout = "~/DesktopModules/MVC/<%= namespace %>/<%= extensionName %>/Views/Shared/_Layout.cshtml";
 }
