refactored MVC template v.2.1.0 major

--- a/generators/mvc/templates/Views/Example/Edit.cshtml
+++ b/generators/mvc/templates/Views/Example/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<<%= fullNamespace %>.Models.ExampleInfo>
+@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<<%= fullNamespace %>.Models.<%= extensionName %>Info>
 
 @using System.Collections.Generic
 @using DotNetNuke.Web.Mvc.Helpers
@@ -19,7 +19,7 @@
                 <div><label for="description">@Dnn.LocalizeString("lblDescription")</label></div>
                 @Html.TextArea("description", Model.Description)
             </div>
-            @Html.HiddenFor(m => m.ExampleId)
+            @Html.HiddenFor(m => m.<%= extensionName %>Id)
             @Html.HiddenFor(m => m.ModuleId)
         </fieldset>
     </div>
