--- a/generators/mvc/templates/Views/Example/Edit.cshtml
+++ b/generators/mvc/templates/Views/Example/Edit.cshtml
@@ -1,4 +1,4 @@
-@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<<%= fullNamespace %>.Models.<%= extensionName %>Info>
+﻿@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<<%= fullNamespace %>.Models.ExampleInfo>
 
 @using System.Collections.Generic
 @using DotNetNuke.Web.Mvc.Helpers
