--- a/generators/mvc/templates/Views/Example/Index.cshtml
+++ b/generators/mvc/templates/Views/Example/Index.cshtml
@@ -16,7 +16,7 @@
     <li class="tm_t">
       <h3>@item.Title</h3>
       <div class="tm_td">@item.Description
-        @item.CreatedByUser().Displayname
+        @item.CreatedByUser().DisplayName
       </div>
       @{
                         if (Dnn.ModuleContext.IsEditable)
