added mvc+spa v5.4.5

--- a/generators/mvc-spa/templates/Views/Example/Index.cshtml
+++ b/generators/mvc-spa/templates/Views/Example/Index.cshtml
@@ -9,7 +9,7 @@
 @{
     var defaultJsPriority = 100;
 
-    ClientResourceManager.RegisterStyleSheet(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Scripts/bootstrap/3.3.5/css/bootstrap.min.css");
+    //ClientResourceManager.RegisterStyleSheet(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Scripts/bootstrap/3.3.5/css/bootstrap.min.css");
     ClientResourceManager.RegisterStyleSheet(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Styles/bootstrap/flat/bootstrap-flat.min.css");
     ClientResourceManager.RegisterStyleSheet(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Styles/bootstrap/flat/bootstrap-flat-extras.min.css");
     
@@ -22,7 +22,7 @@
 
     ClientResourceManager.RegisterScript(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Scripts/moment/moment.min.js", defaultJsPriority, DnnFormBottomProvider.DefaultName);
     ClientResourceManager.RegisterScript(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Scripts/moment/angular-moment.min.js", defaultJsPriority, DnnFormBottomProvider.DefaultName);
-    ClientResourceManager.RegisterScript(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Scripts/bootstrap/3.3.5/js/bootstrap.min.js", defaultJsPriority, DnnFormBottomProvider.DefaultName);
+    //ClientResourceManager.RegisterScript(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Scripts/bootstrap/3.3.5/js/bootstrap.min.js", defaultJsPriority, DnnFormBottomProvider.DefaultName);
     
     ClientResourceManager.RegisterScript(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Styles/bootstrap/bootflat/js/icheck.min.js", 11, DnnPageHeaderProvider.DefaultName);
     ClientResourceManager.RegisterScript(Dnn.DnnPage, "~" + ViewBag.ModulePath + "Styles/bootstrap/bootflat/js/jquery.fs.selecter.min.js", 12, DnnPageHeaderProvider.DefaultName);
