--- a/generators/mvc-spa/templates/Views/_ViewStart.cshtml
+++ b/generators/mvc-spa/templates/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 @{
-    Layout = "~/DesktopModules/MVC/<%= fullNamespace %>/Views/Shared/_Layout.cshtml";
+    Layout = "~/DesktopModules/MVC/<%= namespace %>/<%= extensionName %>/Views/Shared/_Layout.cshtml";
 }
