--- a/generators/mvc-spa/templates/Views/Example/Index.cshtml
+++ b/generators/mvc-spa/templates/Views/Example/Index.cshtml
@@ -1,4 +1,4 @@
-@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<IEnumerable<<%= fullNamespace %>.Models.ExampleInfo>>
+@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<IEnumerable<<%= fullNamespace %>.Models.<%= extensionName %>Info>>
 
 @using System.Text.RegularExpressions
 @using DotNetNuke.Framework.JavaScriptLibraries
