--- a/generators/mvc-spa/templates/Templates/_default/examples.html
+++ b/generators/mvc-spa/templates/Templates/_default/examples.html
@@ -1,15 +1,15 @@
-﻿<h2><%= moduleFriendlyName %></h2>
+<h2><%= moduleFriendlyName %></h2>
 <div class="container">
-    <div class="row" ng-show="examples.length > 0">
+    <div class="row" ng-show="<%= objectName %>s.length > 0">
         <div class="col-sm-3 col-sm-offset-9">
             <div class="pull-right">
-                <div class="form-group" ng-class="{ 'has-error' : exampleFilter != '' }">
-                    <input type="text" ng-Model="exampleFilter" placeholder="Filter By..." class="form-control" />
+                <div class="form-group" ng-class="{ 'has-error' : <%= objectName %>Filter != '' }">
+                    <input type="text" ng-Model="<%= objectName %>Filter" placeholder="Filter By..." class="form-control" />
                 </div>
             </div>
         </div>
     </div>
-    <div class="row" ng-show="examples.length == 0">
+    <div class="row" ng-show="<%= objectName %>s.length == 0">
         <div class="col-lg-12">
             <div class="alert alert-warning">
                 <h4>Whoops!</h4>
@@ -27,20 +27,20 @@
             </div>
         </div>
     </div>
-    <div class="row" ng-show="examples.length > 0">
-        <div ng-repeat="example in examples | filter: exampleFilter | orderBy: 'Title'">
+    <div class="row" ng-show="<%= objectName %>s.length > 0">
+        <div ng-repeat="<%= objectName %> in <%= objectName %>s | filter: <%= objectName %>Filter | orderBy: 'Title'">
             <div class="clearfix" ng-if="$index % 3 == 0"></div>
             <div class="col-sm-4">
                 <div class="sessioncard sessioncard-primary">
                     <div class="sessioncard-content">
                         <h3 class="lead">
-                            {{example.Title}}
+                            {{<%= objectName %>.Title}}
                         </h3>
                         <div>
-                            {{example.Description}}
+                            {{<%= objectName %>.Description}}
                         </div>
                         <div class="clearfix" ng-show="userCanEdit">
-                            <a class="btn btn-secondary" href="#/update/{{example.ExampleId}}" ng-show="userCanEdit">
+                            <a class="btn btn-secondary" href="#/update/{{<%= objectName %>.<%= extensionName %>Id}}" ng-show="userCanEdit">
                                 <i class="glyphicon glyphicon-edit"></i>
                                 Edit Item
                             </a>
